tests/noproph/lemma_tests.stderr
error[E0432]: unresolved import `gilogic::macros::no_prophecies`
 --> ../tests/noproph/lemma_tests.rs:5:14
  |
5 |     macros::{no_prophecies::with_freeze_lemma_for_mutref, *},
  |              ^^^^^^^^^^^^^ could not find `no_prophecies` in `macros`

warning: unused import: `Ownable`
 --> ../tests/noproph/lemma_tests.rs:7:5
  |
7 |     Ownable,
  |     ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

[TIMESTAMP WARN  lib_rtg::metadata] could not read metadata for crate `"std"`: Os { code: 2, kind: NotFound, message: "No such file or directory" }
error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0432`.
